Ingress/host-routing/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
